--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,45 @@ body {
     line-height: 1.71;
     color: var(--text-color);
 }
+
+/* Глобальный сброс */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
 /* nav-index */
-.nav {
+.header,
+.header__nav,
+.nav__ul,
+.header__adress{
+    display: flex;
+    align-items: center;
+}
+
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid var(--header-line-color);
+  }
+
+.nav__link {
     font-weight: 500;
     letter-spacing: 0.02em;
     line-height: 1.14;
@@ -30,18 +67,33 @@ body {
 .current{
     color: var(--accent-color);
 }
-.nav__adress{
+
+.adress__link{
     font-weight: 500;
     letter-spacing: 0.02em;
     line-height: 1.14;
     color: inherit;
 }
-.nav:hover,
-.nav:focus,
-.nav__adress:hover,
-.nav__adress:focus{
+
+.nav__link:hover,
+.nav__link:focus,
+.adress__link:hover,
+.adress__link:focus{
     color: var(--accent-color);
 }
+
+.header__adress{
+    margin-left: auto;
+}
+
+.adres__item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.nav__item:not(:last-child) {
+    margin-right: 50px;
+}
+
 /* logo */
 .web {
     font-family: Raleway;
@@ -49,12 +101,16 @@ body {
     font-size: 26px;
     line-height: 1.19;
     color: var(--accent-color);
+    margin-right: 93px;
 }
 .studio {
     color: #000000
 }
 /* hero-index */
 .hero{
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-color: var(--footer-color);
 }
 .hero__bg {
@@ -65,6 +121,10 @@ body {
     color: var(--white);
     text-align: center;
     text-transform: uppercase;
+    width: 696px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .hero__button{
     border-radius: 4px;
@@ -73,26 +133,59 @@ body {
     height: 50px;
     font-family: inherit;
     font-weight: 500;
+    font-size: 16px;
     line-height: 1.875;
     letter-spacing: 0.06em;
     cursor: pointer;
     background-color: var(--accent-color);
     color: var(--white);
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .hero__button:hover,
 .hero__button:focus{
     background-color: var(--hero-button-hover-color);
 }
 /* Наши преимущества */
+.hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 .feature__title{
     font-size: 14px;
     line-height: 1.14 ;    
     font-weight: 700;    
     text-transform: uppercase;
     color: var(--text-bold-color);
+    margin-bottom: 10px;
 }
+
 .feature__text{
     line-height: 1.71;
+}
+
+.feature__item{
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.feature{
+    display: flex;
+    align-items: center;
+    margin-top: -30px;
+    margin-left: -30px;
 }
 /* Чем мы занимемся */
 .heading{
@@ -101,45 +194,105 @@ body {
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
+    margin-bottom: 50px;
+}
+
+.heading__list{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.heading__item + .heading__item{
+    margin-left: 30px;
 }
 /* Наша команда */
+.team{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.team__item{
+    background: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
 .team__member{
     font-size: 16px;
     line-height: 1.19;
     font-weight: 500;
     color: var(--text-bold-color);
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.team__margin{
+    margin: 30px 0;
 }
 
 .team__job{
     font-size: 16px;
     line-height: 1.18;
+    text-align: center;
+    margin-top: 10px;
 }
 /* portfolio.html */
-/* .filter{
+.filter{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-} */
+    justify-content: center; 
+} 
+
+.filter__item:not(:last-child){
+    margin-right: 8px;
+}
+
 .filter__button{
     border: none;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.62;
+    text-align: center;
     color: var(--text-bold-color);
     background-color: var(--white);
     letter-spacing: 0.03em;
     cursor: pointer;
+    padding: 6px 22px;
 }
 
 .filter__button:focus,
 .filter__button:hover{
     background-color: var(--accent-color);
     color: var(--white);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); /*было сказано доработать*/
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
 
+.portfolio{
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -30px;
+}
+
+.portfolio__item{
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+.portfolio__img{
+    display: block;
+}
+
+.portfolio__padding{
+    border-bottom: 1px solid #eeeeee;
+    padding: 20px 24px;
+    box-sizing: border-box;
+}
 .portfolio__heading{
     font-size: 18px;
     font-weight: 700;
@@ -150,11 +303,38 @@ body {
 .portfolio__text{
     font-size: 16px;
     line-height: 1.87;
+    letter-spacing: 0.03em;
+    margin-top: 4px;
 }
 /* footer */
+.footer__web{
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    color: var(--accent-color);
+    display: block;
+    margin-bottom: 20px;
+}
+
 .footer {    
     background-color: var(--footer-color);
+    padding: 60px 0;
 }
+
+.footer-flex{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__list{
+    margin-top: 20px;
+}
+
+.footer__item:not(:first-child){
+    margin-top: 9px;
+}
+
 .footer__map{    
     color: var(--white);
 }
@@ -179,3 +359,14 @@ body {
 .link{
     text-decoration: none;
 }
+
+.container{
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
