--- a/css/styles.css
+++ b/css/styles.css
@@ -32,21 +32,29 @@ p {
   margin-bottom: 0;
 }
 
-ul,
-ol {
-  margin-top: 0;
-  margin-bottom: 0;
+ul{
+  margin: 0;
   padding-left: 0;
+  list-style: none;
+}
+
+a{
+    text-decoration: none;
 }
 
 img {
-  display: block;
+    max-width: 100%;
+    display: block;
+    height: auto;
 }
 /* nav-index */
+
 .header,
-.header__nav,
 .nav__ul,
-.header__adress{
+.header__nav,
+.header__adress,
+.header__container
+{
     display: flex;
     align-items: center;
 }
@@ -55,13 +63,16 @@ img {
     padding-top: 24px;
     padding-bottom: 24px;
     border-bottom: 1px solid var(--header-line-color);
-  }
+}
+
+  
 
 .nav__link {
     font-weight: 500;
     letter-spacing: 0.02em;
     line-height: 1.14;
     color: var(--text-bold-color);
+    
 }
 
 .current{
@@ -86,13 +97,14 @@ img {
     margin-left: auto;
 }
 
-.adres__item:not(:last-child) {
-    margin-right: 30px;
-}
-
 .nav__item:not(:last-child) {
     margin-right: 50px;
 }
+
+.adres__item:not(:last-child) {
+    margin-right: 50px;
+}
+
 
 /* logo */
 .web {
@@ -174,7 +186,7 @@ img {
     line-height: 1.71;
 }
 
-.feature__item{
+/* .feature__item{
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 30px;
@@ -182,12 +194,29 @@ img {
 }
 
 .feature{
-    display: flex;
-    align-items: center;
+    display: flex;    
     margin-top: -30px;
     margin-left: -30px;
+}*/
+
+/* Другой вариант */
+.feature__item{flex-wrap: wrap;
+    justify-content: space-between;}
+.feature__item:not(:last-child){
+    margin-right: 30px;
 }
+.feature{
+    display: flex;    
+}
+/* Конец другого варианта */
+
+
 /* Чем мы занимемся */
+.our-work,
+.our-team{
+    padding-top: 0px;
+}
+
 .heading{
     color: var(--text-bold-color);
     font-weight: 700;
@@ -201,11 +230,11 @@ img {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
-.heading__item + .heading__item{
-    margin-left: 30px;
+
+.heading__pudding{
+    padding-top: 0;
 }
 /* Наша команда */
 .team{
@@ -215,7 +244,7 @@ img {
 }
 
 .team__item{
-    background: #ffffff;
+    background:var(--gray-background);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -230,7 +259,7 @@ img {
 }
 
 .team__margin{
-    margin: 30px 0;
+    padding: 30px 0;
 }
 
 .team__job{
@@ -290,8 +319,9 @@ img {
 
 .portfolio__padding{
     border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+    border-right: 1px solid #eeeeee;
     padding: 20px 24px;
-    box-sizing: border-box;
 }
 .portfolio__heading{
     font-size: 18px;
@@ -327,9 +357,6 @@ img {
     flex-direction: column;
 }
 
-.footer__list{
-    margin-top: 20px;
-}
 
 .footer__item:not(:first-child){
     margin-top: 9px;
@@ -351,13 +378,6 @@ img {
 
 .normal{
     font-style: normal;
-}
-
-.list{
-    list-style: none;
-}
-.link{
-    text-decoration: none;
 }
 
 .container{
