.heading__item:not(:last-child)

--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,9 @@ img {
     flex-wrap: wrap;
 }
 
+.heading__item:not(:last-child){
+    margin-right: 30px;
+}
 
 .heading__pudding{
     padding-top: 0;
