--- a/css/styles.css
+++ b/css/styles.css
@@ -232,10 +232,14 @@ img {
     flex-wrap: wrap;
 }
 
+.heading__item:not(:last-child){
+    margin-right: 30px;
+}
 
 .heading__pudding{
     padding-top: 0;
 }
+
 /* Наша команда */
 .team{
     display: flex;
