--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,11 @@ a{
     text-decoration: none;
 }
 
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
 img {
     max-width: 100%;
     display: block;
@@ -212,8 +217,7 @@ img {
 
 
 /* Чем мы занимемся */
-.our-work,
-.our-team{
+.our-work{
     padding-top: 0px;
 }
 
@@ -238,6 +242,9 @@ img {
     padding-top: 0;
 }
 /* Наша команда */
+.our-team{
+    background-color: #f5f4fa;
+}
 .team{
     display: flex;
     justify-content: space-between;
@@ -245,7 +252,7 @@ img {
 }
 
 .team__item{
-    background:var(--gray-background);
+    background:var(--white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -387,7 +394,3 @@ img {
     padding-right: 15px;
     margin: 0 auto;
 }
-.section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
